Fix reference translation

--- a/view/locale/ru/template/default/index.ejs
+++ b/view/locale/ru/template/default/index.ejs
@@ -49,14 +49,14 @@
     </div>
     <div class="panel-body">
         <p>
-            Типы атрибутов <b>Ссылка на объект</b> и <b>Обратная ссылка</b> определяют связь между классами.
+            Типы атрибутов <b>Ссылочный</b> и <b>Обратная ссылка</b> определяют связь между классами.
             Параметры связи устанавливаются на вкладке <b>Отношение</b>.
             <br>
             Например, класс <b>Статья</b> имеет связь с классом <b>Категория</b>,
             потому что каждая статья может быть размещена в любой категории.
         </p>
         <p>
-            Тип <b>Ссылка на объект</b> хранит данные связи непосредственно в объекте класса.
+            Тип <b>Ссылочный</b> хранит данные связи непосредственно в объекте класса.
             <br>
             Тип <b>Обратная ссылка</b> извлекает данные из объекта связанного класса.
             <br>
@@ -87,7 +87,7 @@
             <br>
             Кодовое имя <b>create</b> используется для представления объекта при создании.
             <br>
-            Кодовое имя <b>update</b> используется для представления объекта при редактировании.
+            Кодовое имя <b>edit</b> используется для представления объекта при редактировании.
         </p>
     </div>
 </div>
