--- a/view/template/_part/nav/logo.ejs
+++ b/view/template/_part/nav/logo.ejs
@@ -1,6 +1,6 @@
 <!-- studio/_part/nav/logo -->
 
-<a href="studio" class="logo">
+<a href="studio" class="logo" title="Studio">
     <span class="logo-mini"><b>S</b></span>
     <span class="logo-lg"><%- _module.app.getTitle() %>.<b>Studio</b></span>
 </a>
