--- a/view/template/class-attr/_tabSearch.ejs
+++ b/view/template/class-attr/_tabSearch.ejs
@@ -4,7 +4,7 @@
         template: _view.get('_part/attr/checkbox'),
         params: {
             attr: 'commonSearchable',
-            hint: 'List input search'
+            hint: 'List search'
         }
     },{
         template: _view.get('_part/attr/checkbox'),
