--- a/view/template/class-group/_tabMain.ejs
+++ b/view/template/class-group/_tabMain.ejs
@@ -4,6 +4,10 @@
     hint: 'Expanded group or active tab'
 }) %>
 
+<%- include(_view.get('_part/attr/text'), {
+    attr: 'description'
+}) %>
+
 <%- include(_view.get('_part/attr/string'), {
     attr: 'hint'
 }) %>
