--- a/view/template/class-group/sort.ejs
+++ b/view/template/class-group/sort.ejs
@@ -13,7 +13,8 @@
             sortable: true,
             format: 'relation'
         },{
-            name: 'type'
+            name: 'type',
+            format: 'label'
         },{
             name: 'orderNumber',
             sortable: true
