--- a/view/template/report-group/select.ejs
+++ b/view/template/report-group/select.ejs
@@ -4,11 +4,14 @@
     data: {
         columns: [{
             name: 'name',
+            sortable: true,
             searchable: true
         },{
             name: 'label',
+            sortable: true,
             searchable: true
         }],
+        order: {name: 1},
         create: null
     }
 }) %>
