--- a/view/template/view-attr/sort.ejs
+++ b/view/template/view-attr/sort.ejs
@@ -11,7 +11,9 @@
             escape: false
         },{
             name: 'group',
-            sortable: true
+            sortable: true,
+            format: 'relation',
+            escape: false
         },{
             name: 'orderNumber',
             sortable: true
