--- a/view/template/view/selectFromParent.ejs
+++ b/view/template/view/selectFromParent.ejs
@@ -3,20 +3,23 @@
 <%- include(_view.get('_part/list/select'), {
     data: {
         columns: [{
-            name: 'name',
-            searchable: true
-        },{
-            name: 'label',
-            searchable: true
-        },{
             name: 'class',
             format: {
                 name: 'relation',
                 url: _url('class/update')
             }
+        },{
+            name: 'name',
+            sortable: true,
+            searchable: true
+        },{
+            name: 'label',
+            sortable: true,
+            searchable: true
         }],
         multiple: false,
         list: ['list-from-parent', classModel],
+        order: {name: 1},
         create: null,
         delete: null
     }
