--- a/view/template/class-attr/select.ejs
+++ b/view/template/class-attr/select.ejs
@@ -4,14 +4,17 @@
     data: {
         columns: [{
             name: 'name',
+            sortable: true,
             searchable: true
         },{
             name: 'label',
+            sortable: true,
             searchable: true
         },{
             name: 'type',
             format: 'label'
         }],
+        order: {name: 1},
         create: null
     }
 }) %>
