--- a/view/template/class/select.ejs
+++ b/view/template/class/select.ejs
@@ -7,14 +7,17 @@
             format: 'boolean'
         },{
             name: 'name',
+            sortable: true,
             searchable: true
         },{
             name: 'label',
+            sortable: true,
             searchable: true
         },{
             name: 'description',
             searchable: true
         }],
+        order: {name: 1},
         create: null,
         delete: null
     }
