--- a/view/template/state/select.ejs
+++ b/view/template/state/select.ejs
@@ -4,14 +4,17 @@
     data: {
         columns: [{
             name: 'name',
+            sortable: true,
             searchable: true
         },{
             name: 'label',
+            sortable: true,
             searchable: true
         },{
             name: 'description',
             searchable: true
         }],
+        order: {name: 1},
         create: null
     }
 }) %>
