--- a/view/template/class-attr/_tabRelation.ejs
+++ b/view/template/class-attr/_tabRelation.ejs
@@ -74,7 +74,7 @@ const typeTrigger = ['START TRIGGER', 'type'];
         template: _view.get('_part/attr/number'),
         params: {
             attr: 'eagerDepth',
-            extHint: 'Limiting loading depth of related objects'
+            extHint: 'Limit the loading depth of related objects'
         }
     }]
 }) %>
