--- a/view/template/state/_form.ejs
+++ b/view/template/state/_form.ejs
@@ -20,7 +20,8 @@ const stringTemplate = _view.get('_part/attr/string');
     items: [{
         template: checkboxTemplate,
         params: {
-            attr: 'defaults'
+            attr: 'defaults',
+            hint: 'This state will be assigned to a new object'
         }
     }, {
         template: checkboxTemplate,
