--- a/view/template/class-rule/_form.ejs
+++ b/view/template/class-rule/_form.ejs
@@ -7,9 +7,19 @@
     url: ['class/update', model.rel('owner')]
 }) %>
 
-<%- include(_view.get('_part/attr/select'), {
-    attr: 'type',
-    items: 'labels'
+<%- include(_view.get('_part/group/columns'), {
+    items: [{
+        template: _view.get('_part/attr/select'),
+        params: {
+            attr: 'type',
+            items: 'labels'
+        }
+    }, {
+        template: _view.get('_part/attr/string'),
+        params: {
+            attr: 'orderNumber'
+        }
+    }]
 }) %>
 
 <%- include(_view.get('_part/attr/relation'), {
