--- a/view/template/view-attr/createByClassAttrs.ejs
+++ b/view/template/view-attr/createByClassAttrs.ejs
@@ -1,25 +1,33 @@
 <% layout(_view.get('_layout/modal/select')) %>
-
+<%
+const columns = [{
+    name: 'name',
+    sortable: true,
+    searchable: true
+}, {
+    name: 'label',
+    sortable: true,
+    searchable: true
+}, {
+    name: 'type',
+    format: 'label'
+}];
+if (classModel.hasParent()) {
+    columns.unshift({
+        name: 'inherited',
+        format: 'boolean'
+    });
+}
+%>
 <%- include(_view.get('_part/list/select'), {
     data: {
-        columns: [{
-            name: 'inherited',
-            format: 'boolean'
-        },{
-            name: 'name',
-            sortable: true,
-            searchable:true
-        },{
-            name: 'label',
-            sortable: true,
-            searchable:true
-        },{
-            name: 'type',
-            format: 'label'
-        }],
-        order:{original: 1, name: 1},
-        select: ['create-by-class-attrs', view],
-        list: ['class-attr/list-unused-by-view', view],
+        columns,
+        order:{
+            original: 1,
+            name: 1
+        },
+        select: ['create-by-class-attrs', viewModel],
+        list: ['class-attr/list-unused-by-view', viewModel],
         update: 'class-attr/update',
         create: null,
         paging: false
