--- a/view/template/view-behavior/_form.ejs
+++ b/view/template/view-behavior/_form.ejs
@@ -1,6 +1,10 @@
 <% layout(_view.get(_layout)) %>
 <% block('tab', 'Behavior') %>
 
+<%- include(_view.get('_part/attr/hidden'), {
+    attr: 'owner'
+}) %>
+
 <%- include(_view.get('_part/group/columns'), {
     items: [{
         template: _view.get('_part/attr/select'),
@@ -9,11 +13,9 @@
             items: 'labels'
         }
     }, {
-        template: _view.get('_part/attr/static'),
+        template: _view.get('_part/attr/string'),
         params: {
-            attr: 'owner',
-            displayValue: model.getRelatedTitle('owner'),
-            url: ['view/update', model.rel('owner')]
+            attr: 'orderNumber'
         }
     }]
 }) %>
