--- a/view/template/class-attr/_tabRelationBase.ejs
+++ b/view/template/class-attr/_tabRelationBase.ejs
@@ -64,7 +64,7 @@ const backrefTypeTrigger = ['AND', {type: 'backref'}, typeTrigger];
         template: enumTemplate,
         params: {
             attr: 'onDelete',
-            extHint: 'On delete reference class instance:\nCascade - delete relation owner instance\nNull - empty linked attribute value',
+            extHint: 'When deleting an instance of a reference class:\nCascade - delete relation owner instance\nNull - empty linked attribute value',
             sets: model.RELATED_ACTION_ENUMS,
             actionBinder: {value: [['null', refTypeTrigger], ['', backrefTypeTrigger]]}
         }
@@ -72,7 +72,7 @@ const backrefTypeTrigger = ['AND', {type: 'backref'}, typeTrigger];
         template: enumTemplate,
         params: {
             attr: 'onUpdate',
-            extHint: 'On update reference class instance:\nCascade - update linked attribute value\nNull - empty linked attribute value',
+            extHint: 'When updating an instance of a reference class:\nCascade - update linked attribute value\nNull - empty linked attribute value',
             sets: model.RELATED_ACTION_ENUMS
         }
     }]
