--- a/view/template/attr-behavior/_form.ejs
+++ b/view/template/attr-behavior/_form.ejs
@@ -16,4 +16,8 @@
     }]
 }) %>
 
+<%- include(_view.get('_part/attr/text'), {
+    attr: 'description'
+}) %>
+
 <%- include(_view.get('_part/behavior-param/index')) %>
