--- a/view/template/class-group/update.ejs
+++ b/view/template/class-group/update.ejs
@@ -77,7 +77,7 @@ const relationTemplate = _view.get('_part/attr/relation');
                 order: {orderNumber: 1},
                 link: null,
                 unlink: null,
-                create: ['class/create-by-group', model],
+                create: ['class-attr/create-by-group', model],
                 delete: null,
                 showTop: true,
                 modalSort: true
