--- a/view/template/class-behavior/_form.ejs
+++ b/view/template/class-behavior/_form.ejs
@@ -20,4 +20,8 @@
     }]
 }) %>
 
+<%- include(_view.get('_part/attr/text'), {
+    attr: 'description'
+}) %>
+
 <%- include(_view.get('_part/behavior-param/index')) %>
