--- a/view/template/class-rule/_form.ejs
+++ b/view/template/class-rule/_form.ejs
@@ -22,6 +22,10 @@
     }]
 }) %>
 
+<%- include(_view.get('_part/attr/text'), {
+    attr: 'description'
+}) %>
+
 <%- include(_view.get('_part/attr/relation'), {
     attr: 'attrs',
     data: {
