--- a/view/template/nav-node/update.ejs
+++ b/view/template/nav-node/update.ejs
@@ -1,6 +1,10 @@
 <% block('tab', 'Node') %>
 <% block('title', model.getTitle()); %>
 <% block('titleTranslation', 'none'); %>
+<% block('commands', {
+    template: _view.get('_part/tool/modelExport'),
+    url: _url('export/nav-section', model.rel('section'))
+}); %>
 
 <%- include('./_form') %>
 
@@ -19,10 +23,28 @@
                 columns: [{
                     name: 'name',
                     sortable: true
-                },{
+                }, {
                     name: 'label',
                     sortable: true
-                },{
+                }, {
+                    name: 'class',
+                    format: {
+                        name: 'relation',
+                        url: _url('class/update')
+                    }
+                }, {
+                    name: 'view',
+                    format: {
+                        name: 'relation',
+                        url: _url('view/update')
+                    }
+                }, {
+                    name: 'report',
+                    format: {
+                        name: 'relation',
+                        url: _url('report/updatet')
+                    }
+                }, {
                     name: 'orderNumber',
                     sortable: true
                 }],
