--- a/view/locale/ru/template/default/index.ejs
+++ b/view/locale/ru/template/default/index.ejs
@@ -15,10 +15,10 @@
         </p>
         <p>
             Созданные в Студии данные находятся в отдельном хранилище.
-            Чтобы данные попали в приложение необходимо экспортировать их в директорию <b>meta/app</b>.
+            Чтобы данные попали в приложение необходимо экспортировать их в директорию <b>metadata/app</b>.
             <br>
             Экспорт данных можно сделать в другое место,
-            но приложение загружается только из директории <b>meta/app</b>.
+            но приложение загружается только из директории <b>metadata/app</b>.
         </p>
     </div>
 </div>
