--- a/view/template/_part/tool/cloneFromParent.ejs
+++ b/view/template/_part/tool/cloneFromParent.ejs
@@ -1,7 +1,5 @@
 
-<% if (model.get('parent')) { %>
 <button data-command="cloneFromParent" data-select="<%- _url(select) %>" data-clone="<%- _url(clone) %>"
         title="<%= title %>" class="btn btn-success btn-light" type="button">
-    <span class="fa fa-sitemap"></span>
+    <span class="<%- icon %>"></span>
 </button>
-<% } %>
