--- a/view/template/class/update.ejs
+++ b/view/template/class/update.ejs
@@ -33,7 +33,7 @@ const relationTemplate = _view.get('_part/attr/relation');
             data: {
                 columns: [{
                     name: 'type',
-                    translate: ''
+                    translateData: ''
                 }, {
                     name: 'param'
                 }, {
@@ -57,7 +57,7 @@ const relationTemplate = _view.get('_part/attr/relation');
                     format: 'relation'
                 },{
                     name: 'type',
-                    translate: ''
+                    translateData: ''
                 },{
                     name: 'param'
                 },{
