--- a/view/template/default/index.ejs
+++ b/view/template/default/index.ejs
@@ -14,10 +14,10 @@
         </p>
         <p>
             Created metadata is stored in a separate storage.
-            Export data to the <b>meta/app</b> folder to create application.
+            Export data to the <b>metadata/app</b> folder to create application.
             <br>
             You can export to other place,
-            but application is launched from the <b>meta/app</b> folder only.
+            but application is launched from the <b>metadata/app</b> folder only.
         </p>
     </div>
 </div>
