--- a/view/template/enum/_form.ejs
+++ b/view/template/enum/_form.ejs
@@ -16,7 +16,7 @@
         link: null,
         unlink: null,
         order: {orderNumber: 1},
-        modalSort: true
+        modalSort: !model.isNew()
     }
 }) %>
 
