--- a/view/template/transition/_form.ejs
+++ b/view/template/transition/_form.ejs
@@ -75,7 +75,7 @@ const stringTemplate = _view.get('_part/attr/string');
 
 <%- include(jsonTemplate, {
     attr: 'condition',
-    extHint: 'Transition is available if condition is true'
+    extHint: 'Transition is available if object condition is true'
 }) %>
 
 <%- include(jsonTemplate, {
