--- a/view/template/view/_tabAttributes.ejs
+++ b/view/template/view/_tabAttributes.ejs
@@ -23,7 +23,7 @@
         }, {
             name: 'viewType',
             escape: false,
-            translate: ''
+            translateData: ''
         }, {
             name: 'orderNumber',
             sortable: true
