--- a/view/template/view/_tabGroups.ejs
+++ b/view/template/view/_tabGroups.ejs
@@ -25,7 +25,7 @@
         }, {
             name: 'type',
             escape: false,
-            translate: ''
+            translateData: ''
         }, {
             name: 'orderNumber',
             sortable: true,
