--- a/view/template/view/update.ejs
+++ b/view/template/view/update.ejs
@@ -16,7 +16,7 @@
         id: 'Attributes',
         content: _view.getInternalTemplate('_tabAttributes')
     },{
-        id: 'Groups',
+        id: 'Grouping',
         content: _view.getInternalTemplate('_tabGroups')
     },{
         id: 'Behaviors',
@@ -27,7 +27,7 @@
             data: {
                 columns: [{
                     name: 'type',
-                    translate: ''
+                    translateData: ''
                 }, {
                     name: 'param'
                 }, {
