--- a/view/template/_part/behavior-param/file.ejs
+++ b/view/template/_part/behavior-param/file.ejs
@@ -40,6 +40,6 @@ const stringTemplate = _view.get('_part/attr/string');
 
 <%- include(stringTemplate, {
     attr: 'accept',
-    extHint: 'Filter selected files by type (e.g. image/*)'
+    extHint: 'Filter selected files by type (e.g. image/jpeg)'
 }) %>
 
