--- a/view/template/_part/tool/clone.ejs
+++ b/view/template/_part/tool/clone.ejs
@@ -1,5 +1,5 @@
 
 <button data-command="executeUrl" data-url="<%- _url(url) %>" data-selection="true"
         title="Clone" class="btn btn-success btn-light" type="button" >
-    <span class="fa fa-clone"></span>
+    <span class="far fa-clone"></span>
 </button>
