--- a/view/template/class-attr/_tabMain.ejs
+++ b/view/template/class-attr/_tabMain.ejs
@@ -1,4 +1,5 @@
 <%
+const columnTemplate = _view.get('_part/group/columns');
 const jsonTemplate = _view.get('_part/attr/json');
 const stringTemplate = _view.get('_part/attr/string');
 %>
@@ -6,11 +7,10 @@ const stringTemplate = _view.get('_part/attr/string');
 <%- include(_view.getInternalTemplate('_tabMainBase')) %>
 
 <%- include(jsonTemplate, {
-    attr: 'header',
-    extHint: 'String view template'
+    attr: 'defaultValue'
 }) %>
 
-<%- include(_view.get('_part/group/columns'), {
+<%- include(columnTemplate, {
     items: [{
         template: _view.get('_part/attr/select'),
         params: {
@@ -26,21 +26,28 @@ const stringTemplate = _view.get('_part/attr/string');
     }]
 }) %>
 
-<%- include(jsonTemplate, {
-    attr: 'defaultValue'
-}) %>
-
-<%- include(_view.get('_part/attr/radioList'), {
-    attr: 'indexing',
+<%- include(columnTemplate, {
     items: [{
-        value: '',
-        text: 'None'
+        template: jsonTemplate,
+        params: {
+            attr: 'header',
+            extHint: 'String view template'
+        }
     },{
-        value: '1',
-        text: 'Ascending'
-    },{
-        value: '-1',
-        text: 'Descending'
+        template: _view.get('_part/attr/radioList'),
+        params: {
+            attr: 'indexing',
+            items: [{
+                value: '',
+                text: 'None'
+            }, {
+                value: '1',
+                text: 'Ascending'
+            }, {
+                value: '-1',
+                text: 'Descending'
+            }]
+        }
     }]
 }) %>
 
