--- a/view/template/class-attr/_tabRelationBase.ejs
+++ b/view/template/class-attr/_tabRelationBase.ejs
@@ -36,7 +36,7 @@ const backrefTypeTrigger = ['AND', {type: 'backref'}, typeTrigger];
         params: {
             attr: 'refAttr',
             displayValue: model.getRelatedTitle('refAttr'),
-            extHint: 'Key attribute is used for empty value',
+            extHint: 'Key attribute will be used for empty value',
             items: null,
             select2: {ajax: {url: _url('class-attr/list-select')}},
             depends: [{attr: 'refClass', param: 'pid'}],
