--- a/view/template/class-group/_tabMain.ejs
+++ b/view/template/class-group/_tabMain.ejs
@@ -1,7 +1,26 @@
-
-<%- include(_view.get('_part/attr/checkbox'), {
-    attr: 'active',
-    hint: 'Expanded group or active tab'
+<%
+const checkboxTemplate = _view.get('_part/attr/checkbox');
+%>
+<%- include(_view.get('_part/group/inline'), {
+    items: [{
+        template: checkboxTemplate,
+        params: {
+            attr: 'active',
+            hint: 'Expanded group or active tab'
+        }
+    }, {
+        template: checkboxTemplate,
+        params: {
+            attr: 'readOnly',
+            hint: 'All attributes in this group are read-only'
+        }
+    }, {
+        template: checkboxTemplate,
+        params: {
+            attr: 'required',
+            hint: 'All attributes in this group are required'
+        }
+    }]
 }) %>
 
 <%- include(_view.get('_part/attr/text'), {
