--- a/view/template/class-rule/sort.ejs
+++ b/view/template/class-rule/sort.ejs
@@ -6,7 +6,7 @@
             name: 'attrs'
         },{
             name: 'type',
-            translate: ''
+            translateData: ''
         },{
             name: 'param'
         },{
