--- a/view/template/class/_tabViews.ejs
+++ b/view/template/class/_tabViews.ejs
@@ -1,19 +1,41 @@
-
+<%
+const tools = [];
+const columns = [{
+    name: 'name',
+    searchable: true,
+    sortable: true
+}, {
+    name: 'label',
+    searchable: true,
+    sortable: true
+}, {
+    name: 'description'
+}];
+if (model.hasParent()) {
+    columns.push({
+        name: 'inherited',
+        translateData: ''
+    });
+    tools.push({
+        template: _view.get('_part/tool/cloneFromParent'),
+        select: ['view/select-from-parent', model],
+        clone: ['view/clone-from-parent', model],
+        icon: 'fa fa-copy',
+        title: 'Clone from parent classes'
+    }, {
+        template: _view.get('_part/tool/cloneFromParent'),
+        select: ['view/select-from-parent', model],
+        clone: ['view/link-to-parent', model],
+        icon: 'fa fa-link',
+        title: 'Link to parent class view'
+    });
+}
+%>
 <%- include(_view.get('_part/attr/relation'), {
     attr: 'views',
     css: 'no-label',
     data: {
-        columns: [{
-            name: 'name',
-            searchable: true,
-            sortable: true
-        },{
-            name: 'label',
-            searchable: true,
-            sortable: true
-        },{
-            name: 'description'
-        }],
+        columns,
         order: {name: 1},
         link: null,
         unlink: null,
@@ -21,11 +43,6 @@
         clone: true,
         showTop: false
     },
-    tools: [{
-        template: _view.get('_part/tool/cloneFromParent'),
-        select: ['view/select-from-parent', model],
-        clone: ['view/clone-from-parent', model],
-        title: 'Clone from parent class'
-    }]
+    tools
 }) %>
 
