--- a/view/template/import/meta.ejs
+++ b/view/template/import/meta.ejs
@@ -8,14 +8,6 @@
 <div class="alert-warning alert light" data-t=""><%- alert %></div>
 <% } %>
 
-<%- include(_view.get('_part/attr/stringAddon'), {
-    attr: 'source',
-    label: 'Location',
-    extHint: 'Metadata directory relative to application root',
-    before: 'meta/',
-    beforeCss: 'cursor-default',
-    behaviors: [{
-        name: 'StoreLastSavedValueBehavior',
-        defaultValueSelector: '.cursor-default'
-    }]
+<%- include(_view.get('_part/attr/metaLocation'), {
+    attr: 'source'
 }) %>
