--- a/view/template/view-attr/index.ejs
+++ b/view/template/view-attr/index.ejs
@@ -17,7 +17,7 @@
         },{
             name: 'viewType',
             escape: false,
-            translate: ''
+            translateData: ''
         },{
             name: 'header',
             escape: false
