--- a/view/template/view-behavior/sort.ejs
+++ b/view/template/view-behavior/sort.ejs
@@ -4,7 +4,7 @@
     data: {
         columns: [{
             name: 'type',
-            translate: ''
+            translateData: ''
         },{
             name: 'param'
         },{
