--- a/view/template/_part/rule-param/condition.ejs
+++ b/view/template/_part/rule-param/condition.ejs
@@ -1,6 +1,6 @@
 
 <%- include(_view.get('_part/attr/json'), {
-    attr: 'expression'
+    attr: 'condition'
 }) %>
 
 <%- include(_view.get('_part/attr/string'), {
