--- a/view/template/_part/rule-param/unique.ejs
+++ b/view/template/_part/rule-param/unique.ejs
@@ -8,3 +8,7 @@
     attr: 'ignoreCase',
     label: 'Ignore value case'
 }) %>
+
+<%- include(_view.get('_part/attr/string'), {
+    attr: 'message'
+}) %>
