--- a/view/template/class-attr/filter.ejs
+++ b/view/template/class-attr/filter.ejs
@@ -8,6 +8,9 @@
             name: 'commonSearchable',
             type: 'boolean'
         },{
+            name: 'createOnRead',
+            type: 'boolean'
+        },{
             name: 'description'
         },{
             name: 'eagerDepth',
