--- a/view/template/enum/_form.ejs
+++ b/view/template/enum/_form.ejs
@@ -22,7 +22,7 @@
 
 <%- include(_view.get('_part/attr/json'), {
     attr: 'condition',
-    extHint: 'Form values condition ​​activating this enumeration'
+    extHint: 'Form values condition activating this enumeration'
 }) %>
 
 <%- include(_view.get('_part/group/columns'), {
