--- a/view/template/view-attr/filter.ejs
+++ b/view/template/view-attr/filter.ejs
@@ -15,6 +15,9 @@
                 name: 'label'
             }]
         },{
+            name: 'createOnRead',
+            type: 'boolean'
+        },{
             name: 'eagerLoading',
             type: 'boolean'
         },{
