--- a/view/template/class-attr/_tabRelation.ejs
+++ b/view/template/class-attr/_tabRelation.ejs
@@ -52,7 +52,14 @@ const typeTrigger = ['START TRIGGER', 'type'];
         template: checkboxTemplate,
         params: {
             attr: 'sortableRelation',
-            hint: 'Warning: non-indexable sorting'
+            hint: 'Sorting related objects within owner (non-indexable sorting)'
+        }
+    }, {
+        template: checkboxTemplate,
+        params: {
+            attr: 'createOnRead',
+            hint: 'Allow to create related objects on read-only mode'
+
         }
     }]
 }) %>
